refactor: apply clean code practices